# ml-pipeline-deployment

./: .gitignore  README.md  pyproject.toml
.hypothesis/constants/: 032ea53b43245e77  1141be7b47f39eae  115722bb12a03c52  9838bf1eb187dd41  9d2f663dff544785  c2d274eeb869930c
.workspace/: graph TB.mmd
config/: default.yaml
services/: __init__.py
services/data_ingestion/: __init__.py  service.py
services/inference/: __init__.py
services/training/: __init__.py  service.py
shared/: __init__.py  config.py  logging.py  metrics.py  models.py
tests/: __init__.py
tests/properties/: test_config_properties.py  test_data_ingestion_properties.py
tests/unit/: test_config.py  test_data_ingestion.py
